[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"
default-run = "rust-game"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
image = "0.25.6"
dotenvy = "0.15"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
